<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".NovoUtilizadorActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/novo_utilizador"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_NovoUtilizador_username"
        android:hint="@string/digite_o_username"
        android:gravity="center"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_NovoUtilizador_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/digite_a_senha" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/bt_gravar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravar"
            android:layout_marginEnd="50dp"
            android:minWidth="150dp"
            android:layout_marginRight="50dp"
            />
        <Button
            android:id="@+id/bt_Novo_Utilizador_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:text="@string/cancelar" />

    </LinearLayout>
</LinearLayout>